--- a/views/rentals/post-product.ejs
+++ b/views/rentals/post-product.ejs
@@ -21,17 +21,9 @@
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" required>
             </div>
-
-            <!-- <div class="form-control">
-                <label for="imageUrl">Upload image</label>
-                <input type="text" name="imageUrl" id="imageUrl" required>
-            </div> -->
-            <!-- <div class="form-control">
-                <label for="image">Upload Image</label>
-                <input type="file" name="image" id="image" accept="image/*" required>
-            </div> -->
+            
             <div class="form-control">
-                <label for="image">Upload Image</label>
+                <label for="image">Upload Images</label>
                 <input type="file" name="images" id="images" accept="image/*" multiple required>
             </div>
             
@@ -69,8 +61,7 @@
                 <textarea name="location" id="location" rows="5" required></textarea>
             </div>
 
-            
-
+        
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
