--- a/views/secondHand/add-product.ejs
+++ b/views/secondHand/add-product.ejs
@@ -13,15 +13,15 @@
   <%- include('../common/navigation.ejs') %>
 
   <main>
-    <form class="product-form" action="/secondHand/sell" method="POST">
+    <form class="product-form" action="/secondHand/sell" method="POST" enctype="multipart/form-data">
       <div class="form-control">
         <label for="title">Title</label>
         <input type="text" name="title" id="title" required>
       </div>
       <div class="form-control">
-        <label for="imageUrl">Upload image</label>
-        <input type="text" name="imageUrl" id="imageUrl" required>
-      </div>
+        <label for="image">Upload Images</label>
+        <input type="file" name="images" id="images" accept="image/*" multiple required>
+    </div>
       <div class="form-control">
         <label for="price">Direct Purchase Price</label>
         <input type="number" name="price" id="price" step="0.01" required>
