Added profile UI and hover-tooltip

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -111,3 +111,32 @@ body {
     border-color: #3E6B48;
     box-shadow: 0px 0px 5px rgba(62, 107, 72, 0.5);
 }
+
+.tooltip-icon {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    color: #555;
+    font-size: 16px;
+    margin-left: 5px;
+}
+
+.tooltip-icon:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: 280px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    border-radius: 4px;
+    margin-left: 10px;
+    opacity: 0;
+    font-size: 16px;
+}
+
+
