--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,7 @@
     </section>
 
     <% const features = [
-        { image: "rent.jpg", title: "Renting Items", description: "Browse and rent items for all your needs—whether it’s home essentials, tech gadgets, or college supplies", link: "#" },
+        { image: "rent.png", title: "Renting Items", description: "Browse and rent items for all your needs—whether it’s home essentials, tech gadgets, or college supplies", link: "#" },
         { image: "subscription.jpg", title: "Subscription Swapping", description: "Swap subscriptions with ease—whether it's streaming services, e-books, or gym memberships", link: "#" },
         { image: "secondhand.jpg", title: "Second-Hand Chain Buying", description: "Find quality pre-owned items, and give them a new life while saving resources and money", link: "#" }
     ]; %>
