--- a/views/login-signup/login.ejs
+++ b/views/login-signup/login.ejs
@@ -128,7 +128,7 @@
   <div class="container">
     <div class="info-section">
       <h1>Trade<span>Trail</span></h1>
-      <p>"Secure and seamless trading experience."</p>
+      <p>Swap, Sell, Rent, Repeat!</p>
     </div>
     <div class="form-section">
       <form id="loginForm">
