--- a/views/secondHand/buy.ejs
+++ b/views/secondHand/buy.ejs
@@ -32,7 +32,7 @@
     <% if (prods.length > 0) { %>
       <!-- Changed container class names to mimic rental search layout -->
       <div class="rental-list">
-        <% for (let product of prods) { %>`
+        <% for (let product of prods) { %>
           <div class="rental-item">
             <div class="product-card">
               <div class="card__image">
