--- a/views/subscriptionSwapping/add-product.ejs
+++ b/views/subscriptionSwapping/add-product.ejs
@@ -35,21 +35,29 @@
       </div>
       
       <div class="form-control">
-        <label for="price">Direct Purchase Price</label>
+        <label for="price">Original Purchase Price
+            <span class="tooltip-icon"> ⓘ
+                <span class="tooltip-text">The price at which the subscription was originally purchased</span>
+            </span>
+        </label>
         <input type="number" name="price" id="price" step="0.01" required>
       </div>
+    
       <div class="form-control">
         <label for="min_price">Minimum Auction Price</label>
         <input type="number" name="min_price" id="min_price" step="0.01" required>
       </div>
+
       <div class="form-control">
         <label for="startDate">Start Date</label>
         <input type="date" name="startDate" id="startDate" required>
       </div>
+
       <div class="form-control">
         <label for="endDate">End Date</label>
         <input type="date" name="endDate" id="endDate" required>
       </div>
+      
       <div class="form-control">
         <label for="description">Description</label>
         <textarea name="description" id="description" rows="5" required></textarea>
