--- a/public/css/homeStyles.css
+++ b/public/css/homeStyles.css
@@ -51,6 +51,7 @@ body {
 .h2{
     color: #333;
     text-align: center;
+    /* margin-bottom: 20px; */
 
 }
 
@@ -64,7 +65,7 @@ body {
     padding: 50px 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: 900px;
     margin: auto;
     background-color: white;
@@ -73,7 +74,6 @@ body {
     margin-bottom: 30px;
 }
 .feature-section img {
-    width: 40%;
     border-radius: 10px;
 }
 .feature-content {
