--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home TradeTrail</title>
     <link rel="stylesheet" href="/css/homeStyles.css">
+    <link rel="icon" type="image/png" href="/assets/logo2.png">
 
 </head>
 
@@ -18,7 +19,7 @@
 
     <!-- Welcome Section -->
     <div class="welcome-section">
-        <img src="/assets/logo.png" alt="TradeTrail Logo">
+        <img src="/assets/logo.png" alt="TradeTrail Logo" style="height: 220px; max-width: 400px;">
         <h1>Welcome to Trade<span style="color:#52694a ;">Trail</span></h1>
         <p>Swap, Sell, Rent, Repeat!</p>
     </div>
@@ -39,13 +40,13 @@
 
     <% const features = [
         { image: "rent.png", title: "Renting Items", description: "Browse and rent items for all your needs—whether it’s home essentials, tech gadgets, or college supplies", link: "#" },
-        { image: "subscription.jpg", title: "Subscription Swapping", description: "Swap subscriptions with ease—whether it's streaming services, e-books, or gym memberships", link: "#" },
-        { image: "secondhand.jpg", title: "Second-Hand Chain Buying", description: "Find quality pre-owned items, and give them a new life while saving resources and money", link: "#" }
+        { image: "subscription.png", title: "Subscription Swapping", description: "Swap subscriptions with ease—whether it's streaming services, e-books, or gym memberships", link: "#" },
+        { image: "secondhand.png", title: "Second-Hand Chain Buying", description: "Find quality pre-owned items, and give them a new life while saving resources and money", link: "#" }
     ]; %>
 
         <% features.forEach(feature => { %>
             <section class="feature-section">
-                <img src="/assets/<%= feature.image %>" alt="<%= feature.title %>">
+                <img src="/assets/<%= feature.image %>" alt="<%= feature.title %>" style="height: 200px; max-width: 200px;">
                 <div class="feature-content">
                     <h2>
                         <%= feature.title %>
@@ -59,7 +60,7 @@
                         <% } else if (feature.title === "Second-Hand Chain Buying") { %>
                             <button onclick="window.location.href='/secondHand'">Buy an Item</button>
                             <% } else { %>
-                                <button onclick="window.location.href='/subscription'">Explore</button>
+                                <button onclick="window.location.href='/subscription'">Buy a Subscription</button>
                                 <% } %>
                 </div>
             </section>
