--- a/views/cart/unifiedCart.ejs
+++ b/views/cart/unifiedCart.ejs
@@ -32,7 +32,8 @@
       display: block;
     }
     .toggle-btn {
-      font-size: 1.5rem;
+      color: #24b02b !important;
+      font-size: 2rem;
       background: none;
       border: none;
       cursor: pointer;
