--- a/views/common/navigation.ejs
+++ b/views/common/navigation.ejs
@@ -25,7 +25,7 @@
             <a href="/secondHand">Second-Hand Buying</a>
         </li>
         <li class="<%= typeof activePage !== 'undefined' && activePage === 'cart' ? 'active' : '' %>">
-          <a href="/cart">Unified Cart</a>
+          <a href="/cart">Cart</a>
         </li>   
         <li class="<%= typeof activePage !== 'undefined' && activePage === 'profile' ? 'active' : '' %>">
             <a href="/profile" id="profileLink" data-toggle="popover">Profile</a>
