--- a/views/secondHand/direct-add-product.ejs
+++ b/views/secondHand/direct-add-product.ejs
@@ -11,15 +11,15 @@
   <%- include('../common/navigation.ejs') %>
 
   <main>
-    <form class="product-form" action="/secondHand/sell/direct-add-product" method="POST">
+    <form class="product-form" action="/secondHand/sell/direct-add-product" method="POST" enctype="multipart/form-data">
       <div class="form-control">
         <label for="title">Title</label>
         <input type="text" name="title" required>
       </div>
       <div class="form-control">
-        <label for="imageUrl">Image URL</label>
-        <input type="text" name="imageUrl" required>
-      </div>
+        <label for="image">Upload Images</label>
+        <input type="file" name="images" id="images" accept="image/*" multiple required>
+    </div>
       <div class="form-control">
         <label for="price">Price</label>
         <input type="number" name="price" step="0.01" required>
